<resources>
    <string name="app_name" translatable="false">Authlet</string>

    <!-- Login Titles -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Unlock</string>
    <string name="dev_credit">developed by Dev Maksem</string>
    <string name="login_caption">Unlock the vault</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Preference Titles -->
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="general_header">General</string>
    <string name="credits_header">Credits</string>
    <string name="author_header">Authlet - Simple and secure 2FA application</string>
    <string name="version_header">App version</string>

    <!-- Preference Description Titles -->
    <string name="changes_lang">Changes the language of application</string>
    <string name="version_desc_header">0.1 pre-alpha</string>
    <string name="app_year_header" translatable="false">Dev-Maksem, 2020</string>

    <!-- Messages Preferences -->
    <string name="language_list_dialog">Choose language</string>
    <string name="language_title">Language</string>
    <string name="theme_header">Application theme</string>

    <!-- Sync Preferences -->
    <string name="changes_theme">Changes the application theme</string>
    <string name="login_auth_error">Password is not valid. Try again</string>
    <string name="author_desc_header">0.1 pre-alpha</string>
    <string name="string_empty_error">Enter password first</string>
    <string name="codename_hint">Name of service</string>
    <string name="codesecret_hint">Paste your secret here</string>
    <string name="buttontext_add_code">Add new code</string>
    <string name="field_empty_error">Some of fields are empty</string>
    <string name="secret_too_short_error">Double-check your secret</string>
    <string name="done_message">Done!</string>
    <string name="english">English</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="russian">Russian</string>
    <string name="please_choose_theme">Please, choose theme:</string>
    <string name="white_theme">Light Theme</string>
    <string name="black_theme">Dark Theme</string>
    <string name="sort_by">Sort by:</string>
    <string name="title">Title</string>
    <string name="hash">Code</string>
    <string name="copied">Code copied to clipboard</string>
    <string name="code_added">Code added to list</string>
</resources>