<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/switch_to_eng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            app:layout_constraintBottom_toTopOf="@+id/switch_to_ukr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/switch_to_ukr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ukrainian"
            app:layout_constraintBottom_toTopOf="@+id/switch_to_rus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_to_eng" />

        <RadioButton
            android:id="@+id/switch_to_rus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_to_ukr" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>